# dfa2re

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RegexCheckerCore_Windows.lib  api.hpp  cmake_install.cmake  dfa2re  dfa2re.in  dfa2re.out  quick_setup.sh  task.cpp
